--- a/3 курс/5/dev/6/index.html
+++ b/3 курс/5/dev/6/index.html
@@ -3,16 +3,16 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=Windows-1251">
-    <title>login</title>
+    <title>mystore</title>
     <script type='module'>
-        import './scripts/view/start.js';
+        import './scripts/main.js';
     </script>
 </head>
 
 
 <body>
 
-    <div id="root">
+    <div id="app">
     </div>
 </body>
 
